--- a/genindex.html
+++ b/genindex.html
@@ -162,19 +162,93 @@
 <h1 id="index">Index</h1>
 
 <div class="genindex-jumpbox">
- <a href="#M"><strong>M</strong></a>
+ <a href="#F"><strong>F</strong></a>
+ | <a href="#G"><strong>G</strong></a>
+ | <a href="#H"><strong>H</strong></a>
+ | <a href="#M"><strong>M</strong></a>
+ | <a href="#O"><strong>O</strong></a>
+ | <a href="#Q"><strong>Q</strong></a>
+ | <a href="#U"><strong>U</strong></a>
  
 </div>
+<h2 id="F">F</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="optimization_tools/problem.html#metaheuristics.OptimizationProblem.find_neighbour_solution">find_neighbour_solution() (metaheuristics.OptimizationProblem method)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="G">G</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="optimization_tools/problem.html#metaheuristics.OptimizationProblem.get_current_objective_value">get_current_objective_value() (metaheuristics.OptimizationProblem method)</a>
+</li>
+      <li><a href="optimization_tools/problem.html#metaheuristics.OptimizationProblem.get_current_solution">get_current_solution() (metaheuristics.OptimizationProblem method)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="optimization_tools/problem.html#metaheuristics.OptimizationProblem.get_objective_function">get_objective_function() (metaheuristics.OptimizationProblem method)</a>
+</li>
+      <li><a href="optimization_tools/solution.html#metaheuristics.OptimizationSolution.get_objective_value">get_objective_value() (metaheuristics.OptimizationSolution method)</a>
+</li>
+      <li><a href="optimization_tools/solution.html#metaheuristics.OptimizationSolution.get_solution_value">get_solution_value() (metaheuristics.OptimizationSolution method)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="H">H</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="optimization_tools/functions.html#metaheuristics.optimization_tools.optimization_functions.himmelblau">himmelblau() (in module metaheuristics.optimization_tools.optimization_functions)</a>
+</li>
+  </ul></td>
+</tr></table>
+
 <h2 id="M">M</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="index.html#module-metaheuristics">metaheuristics (module)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="optimization_tools/tools.html#module-metaheuristics.optimization_tools">metaheuristics.optimization_tools (module)</a>
 </li>
+      <li><a href="optimization_tools/functions.html#module-metaheuristics.optimization_tools.optimization_functions">metaheuristics.optimization_tools.optimization_functions (module)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="optimization_tools/problem.html#module-metaheuristics.optimization_tools.optimization_problem">metaheuristics.optimization_tools.optimization_problem (module)</a>
+</li>
+      <li><a href="optimization_tools/solution.html#module-metaheuristics.optimization_tools.optimization_solution">metaheuristics.optimization_tools.optimization_solution (module)</a>
+</li>
       <li><a href="simulated_annealing/annealing.html#module-metaheuristics.simulated_annealing">metaheuristics.simulated_annealing (module)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="O">O</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="optimization_tools/problem.html#metaheuristics.OptimizationProblem">OptimizationProblem (class in metaheuristics)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="optimization_tools/solution.html#metaheuristics.OptimizationSolution">OptimizationSolution (class in metaheuristics)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="Q">Q</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="optimization_tools/functions.html#metaheuristics.optimization_tools.optimization_functions.quadratic_assignment_problem_objective">quadratic_assignment_problem_objective() (in module metaheuristics.optimization_tools.optimization_functions)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="U">U</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="optimization_tools/problem.html#metaheuristics.OptimizationProblem.update_current_solution">update_current_solution() (metaheuristics.OptimizationProblem method)</a>
 </li>
   </ul></td>
 </tr></table>
